Removed attempt to change windows form title bar color removed packages associated with changing color of title bar added visible change whne moving mouse over tabs

--- a/Distribution Helper/Distribution Helper.vbproj
+++ b/Distribution Helper/Distribution Helper.vbproj
@@ -146,6 +146,7 @@
   <ItemGroup>
     <EmbeddedResource Include="DistributionForm.resx">
       <DependentUpon>DistributionForm.vb</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="My Project\Resources.resx">
       <Generator>VbMyResourcesResXFileCodeGenerator</Generator>
@@ -185,7 +186,6 @@
       <LastGenOutput>Settings.Designer.vb</LastGenOutput>
     </None>
     <None Include="App.config" />
-    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Resources\" />
